environments/dev/apps/app-go-server/services/go-server/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: go-server
    app.kubernetes.io/part-of: app-go-server
  name: go-server
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: go-server
      app.kubernetes.io/part-of: app-go-server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: go-server
        app.kubernetes.io/part-of: app-go-server
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: go-server
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
