environments/dev/apps/app-go-server/services/go-server/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: go-server
    app.kubernetes.io/part-of: app-go-server
  name: go-server
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: go-server
    app.kubernetes.io/part-of: app-go-server
status:
  loadBalancer: {}
